Overview of changes in gnome-calculator 50.alpha
    * Updated translations
    * Improved metainfo !451 (Maximiliano)
    * Improved build process !448 (Chris Mayo)
    * Fix cropped buttons section #519 (Adrien Plazas)

Overview of changes in gnome-calculator 49.1.1
    * Updated translations
    * Fixed variable usage with text-operators in function definition #504 (Robert Roth)
    * Disable 32-bit unsigned right-shift on 32-bit architectures #503 (Robert Roth)

Overview of changes in gnome-calculator 49.1
    * Updated translations
    * Fixed BDT currency rate #509 (Robert Roth)

Overview of changes in gnome-calculator 49.0.1
    * Updated translations
    * Updated screenshots

Overview of changes in gnome-calculator 49.0
    * Updated translations

Overview of changes in gnome-calculator 49.rc
    * Updated translations
    * Function handling fixes (fcusr)
    * Only allow 2 to 16 number bases #37 (fcusr)
    * Improve very large number handling performance #377 (fcusr)
    * Fixed Planck constant name typo (Anders Jonsson)
    * Ignore case in auto-complete (fcusr)
    * Fixed keyboard shortcut for preferences dialog (fcusr)
    * Bits panel enhancements (fcusr)

Overview of changes in gnome-calculator 49.beta
    * Updated translations
    * Don't use development vala API #490 (Robert Roth)
    * Fix buttons 10^x and 2^x button behaviour !384 (fcusr)
    * Fixed base conversion !385 (fcusr)
    * Port to AdwShortcutsDialog !386 (Automeris Naranja)
    * Support floating point for bit field #457 !387  (fcusr)
    * Only allow entering numbers in financial dialogs !391 (fcusr)
    * Added Sri Lanka Rupees to supported currencies #491 (Robert Roth)
    * Added dialog to show conversion rate download date and source !394 #57 #386 (fcusr)
    * Added all UN treasury supported currencies !397 (Alessandro Astone)
    * Added categories to function popover !396 (fcusr)
    * Fixed electron volts conversion !398 (fcusr)