@@ -95,6 +95,15 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="50~beta" date="2026-01-31" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Support grouping digits in non-decimal numbers !433 (fcusr)</li>
+          <li>Remove the ones function and add swap endianness button !452 (fcusr)</li>
+        </ul>
+      </description>
+    </release>
     <release version="50~alpha" date="2026-01-03" type="development">
       <description>
         <ul>
