@@ -1,3 +1,8 @@
+Overview of changes in gnome-calculator 50.beta
+    * Updated translations
+    * Support grouping digits in non-decimal numbers !433 (fcusr)
+    * Remove the ones function and add swap endianness button !452 (fcusr)
+
 Overview of changes in gnome-calculator 50.alpha
     * Updated translations
     * Improved metainfo !451 (Maximiliano)
